--- a/beamerouterthemenumber.sty
+++ b/beamerouterthemenumber.sty
@@ -9,7 +9,9 @@
 %
 % See the file doc/licenses/LICENSE for more details.
 
-\titlegraphic{\hspace{3.5cm}\footnote{FeenoX needs a logo.}\par\vspace{-1cm}\includegraphics[width=5cm]{feenox-logo}\\ \tiny{Sources and full examples at \url{https://github.com/gtheler/2021-brasil}}}
+\titlegraphic{\hspace{3.5cm}\footnote{FeenoX needs a logo.}\par\vspace{-1cm}\includegraphics[width=5cm]{feenox-logo}\\ \tiny{
+Presentation slides \url{https://www.seamplex.com/feenox}\\
+Sources and full examples at \url{https://github.com/gtheler/2021-brasil}}}
 
 \mode<presentation>
 
